--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -299,10 +299,117 @@ gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
 
 Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bl a begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Om genomströmningstiderna som rådde under 2023 inte förkortas skulle det kunna innebära att många elever inte skulle nå godkänt inom utsatt tid. Särskilt utmanande är tidsfristen för gruppen med förgymnasial utbildning som under perioden 2021-2023 i genomsnitt tog nästan dubbelt så lång tid på sig som de nya reglerna kräver.
 
-## Utbildning?
+## Utbildning
+En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en längre utbildning lever i allmänhet längre, har en genomsnittligt högre inkomst och mår i allmänhet bättre än de med kortare utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har många år kvar i livet.
 
-<span class = "kommentar"> Flytta figurer kopplade till utbildning hit? Just nu ligger många av dessa efter arbetsmarknadsavsnittet</span>
+Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras (se diagram nedan). Den stora skillnaden jämfört mot inrikes födda är att en större andel av de utrikes födda har en förgymnasial utbildning och en mindre andel gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Det är en lite högre andel kvinnor födda i Sverige med eftergymnasial utbildning än utrikes födda, men bland män är förhållandet det omvända.  Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
 
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+gg_utbniva_bakgrund$utbniva_inr_utr_kon_Dalarna_ar2023
+
+```
+<span class = "kommentar">Justera diagramförklaring ovan till inrikes och utrikes födda?</span>
+<br>
+
+<span class = "kommentar">Komplettera nedan med diagram och kontrollera text</span>
+
+Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg- och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden. En aspekt som är viktig att beakta är att <span class = "kommentar">över 30 % av de som invandrat de senaste 11 åren har grundskolekompetens (förgymnasial) eller lägre utbildning</span>. Samtidigt saknas det uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. 
+
+De utrikes födda i Dalarna som har bott i Sverige en längre tid har generellt sett en högre utbildningsnivå än de som invandrat de senaste åren. Huruvida detta beror på skillnader i utbildningsnivå vid invandring, eller att de med längre vistelsetid i större grad hunnit genomfört en utbildning i Sverige framgår inte av diagrammet. Sannolikt är det en kombination av dessa två faktorer.
+
+*Diagram 1 - utbildningsnivå i Dalarna efter vistelsetid i Sverige*
+
+*Diagram 2 - Vistelsetid, utbildningsnivå och inträde på arbetsmarknaden*
+
+<span class = "kommentar">Diagrammen 1 och 2 ovan behövs för att kunna justera texten i avsnittet.</span>
+
+Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
+
+Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. År 2016 utgjordes 5 % av den förvärvsarbetande arbetskraften av yrken utan eller med kortare krav på utbildning och introduktion, vilket var lägst andel i hela EU. För att möjliggöra att fler av de utrikes födda som flyttat till Dalarna de senaste åren ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
+
+Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. I både Sverige och övriga västvärlden finns det emellertid gott om indikationer på att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden. En sak som pekar på detta är att de som är födda i Sverige med utrikes födda föräldrar presterar sämre på arbetsmarknaden än de med svensk bakgrund, även när hänsyn tas till skillnader i utbildningsnivå. Det är teoretiskt möjligt att andra faktorer kan påverka utfallet, men det förefaller föga troligt att skillnaderna skulle vara stora, utan att diskriminering förekommer i någon form. 
+
+Det finns emellertid empiriskt stöd för att diskriminering på arbetsmarknaden verkligen förekommer. Flera svenska studier har undersökt frågan genom att skicka fiktiva ansökningar med påhittade personer till ett stort antal utlysta jobb. Resultatet av studierna har varit att personer med mer svenskklingande namn har betydligt större sannolikhet att bli kallad till en arbetsintervju än personer med ett utländskt klingande namn, trots att ansökningarna i övrigt är i stort sett identiska. De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.
+
+<span class = "kommentar">Är ovanstående fortsatt relevant? Senare forskning på området?</span>
+
+Eftersom en gymnasieutbildning förbättrar möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem. Enligt Socialstyrelsen är det 8 gånger större risk att varken arbeta eller studera för den som överhuvudtaget inte påbörjat gymnasiet, jämfört med en elev som har genomfört ett studieförberedande gymnasieprogram. Det finns även en stark överrisk att varken arbeta eller studera för den som har hoppat av gymnasiet, jämfört med den som har fullföljt en gymnasieutbildning.
+
+<span class = "kommentar">Är ovanstående fortsatt gällande?</span>
+
+<span class = "kommentar">Kontrollera text hit</span>
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+ gg_gym_hogskola_behorighet$behorighet_gymnasiet_jmf_ar
+
+```
+<br>
+
+Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. 2018 låg andelarna för såväl inrikes födda pojkar och flickor omkring 85-90 procent. De har förändrats marginellt fram till 2023. För utrikes födda flickor var andelen behöriga knappt 60 procent 2018 och har ökat till cirka 66 procent 2023. Utrikes födda pojkar har den mest positiva utvecklingen mellan åren, från knappt 48 procent till 68 procent. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023.
+
+I rapporten 2019 studerades avgångseleverna i årskurs 9 i Sverige år 2018 och det var tydligt att andelen behöriga påverkades av migrationsbakgrund. Skillnaderna i andelen behöriga var betydligt mindre mellan elever med utländsk och svensk bakgrund när förutsättningarna var mer likvärdiga. Vid en jämförelse var 91 procent av inrikes födda elever behöriga och 86 procent av inrikes födda elever med utrikes födda föräldrar behöriga, medan 85 procent av de utrikes födda eleverna som invandrat före skolstart var behöriga. Bland utrikes födda elever i riket som invandrat i årskurs 1–5 var andelen behöriga elever däremot märkbart lägre, 67 procent. Allra lägst i riket var behörigheten bland utrikes födda elever som hade invandrat under perioden 2014-2018 (då motsvarande högstadiet) eller saknade svenskt personnummer. Där var andelen behöriga elever 28 procent.
+
+Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige (se diagram nedan). Behörigheten för elever som går ut årskurs 9 med en vistelsetid som är 10 år eller längre, är i det närmaste att likställa med behörigheten för inrikes födda. I gruppen med en vistelsetid mellan 4 och 9 år är behörigheten omkring 20 procentenheter lägre och i gruppen vistelsetid 2-3 år är den ytterligare drygt 20 procentenheter lägre (knappt 40 procent har gymnasiebehörighet). <span class = "kommentar">För lika det som står ovan från rapporten 2019? Ta bort något?.</span>
+
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+ gg_gym_hogskola_behorighet$behorighet_gymnasiet_vistelsetid
+
+```
+<br>
+
+<span class = "kommentar">Data för 0-1 år saknas (NA) - lägga in i diagramförklaring?</span>
+
+[Mörtlund (2020)](https://www.ifau.se/Forskning/Publikationer/Rapporter/2020/arbetet-med-nyanlanda-elever-i-grundskolan/){target="_blank"}^[Mörtlund, Tove (2020). Arbetet med nyanlända elever i grundskolan. IFAU Rapport 2020:2.] noterade stora utmaningar i grundskolan att kvalitetssäkra undervisningen, trots instatser kring språk- och kunskapsutvecklande arbetssätt. Att på en kort tid lära sig svenska språket och samtidigt utveckla ämneskunskaper är en svår utmaning.
+
+En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Diagrammet nedan visar att 2018 var det en högre andel inrikes födda än utrikes födda elever som var behöriga. Skillnaderna var dock betydligt mindre än för avgångseleverna i årskurs 9. 2023 har förhållandet förändrats och andelen behöriga kvinnor är i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen stärker vistelsetidens betydelse för integrationen. Något som är viktigt att beakta när detta studeras är att gymnasieskolan inte är obligatorisk, och att de som exempelvis har avbrutit gymnasiestudier eller läser in grundläggande gymnasiebehörighet inte omfattas av diagrammet.
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+ gg_gym_hogskola_behorighet$behorighet_högksola_jmf_ar
+
+```
+<br>
+
+<span class = "kommentar">Hit 2025-05-08</span>
+
+När andelen behöriga till högskolan undersöks så kan det vara av större relevans att mäta hur stor andel av 19-åringarna som ett visst år är behöriga till högskolan. Detta eftersom vi i Sverige vanligtvis är 19 år när vi erhåller gymnasieexamen. Det är viktigt att komma ihåg att detta inte ger någon heltäckande bild av alla personer eftersom det finns vissa elever som slutför gymnasiet när de är yngre eller äldre än 19 år. En ej slutförd gymnasieexamen vid 19 års ålder beror ändå i en majoritet av fallen på att eleven ligger efter i skolan eller har hoppat av gymnasiet. Av denna anledning blir denna variabel relevant när andelen högskolebehöriga efter bakgrund och kön jämförs. Det som kan konstateras är att utrikes födda i betydligt lägre grad än inrikes födda blir behöriga till högskolestudier vid 19 års ålder. Oavsett om eleven eller föräldrarna är utrikes eller inrikes födda är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män.
+
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_utbniva_bakgrund_alder$utb_niva_bakgrund
+```
+<br>
+
+<span class = "kommentar">Diagram över 1: Andelar obehöriga till gymnasiet - inskrivna på IM-program utifrån bakgrund och 2:Utrikes födda unga som inte studerar eller inte aktiva på arbetsmarknaden utifrån vistelsetid</span>
+
+Bland personer mellan 16 och 19 år (det vänstra diagrammet nedan) är andelen som varken arbetar eller studerar (UVAS) högre för kvinnor än för män, oavsett om personen är inrikes eller utrikes född. Andelen är dessutom som högst för personer som vistats i Sverige en kort tid, och sjunker med vistelsetid. För utrikes födda kvinnor sjunker andelen som varken arbetar eller studerar bland 16-19 åringar från `r uvas_16_19_kvinnor_0_1` procent för de som varit i Sverige i max 2 år till `r uvas_16_19_kvinnor_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel för inrikes födda kvinnor är `r uvas_16_19_kvinnor_inrikes` procent.
+
+För utrikes födda män sjunker motsvarande andel bland 16-19 åringar från ca `r uvas_16_19_man_0_1` procent för de som varit i Sverige i max 2 år till ungefär `r uvas_16_19_man_10_` procent för de som varit i landet i minst 10 år. Noterbart är dock att andelen är högre för män som varit i Sverige i mer än 10 år, än fö de som varit i landet mellan 2 och 10 år. Bland inrikes födda varken arbetar eller studerar `r uvas_16_19_man_inrikes` procent av männen mellan 16 och 19 år.
+
+Om de unga mellan 20-25 år istället undersöks framträder en delvis annorlunda bild (se det högra diagrammet nedan). Bland kvinnor är andelen som varken arbetar eller studerar högre i denna åldersgrupp än den var bland 16-19 åringar, oavsett om personern är inrikes eller utrikes född. För utrikes födda kvinnor sjunker andelen som varken arbetar eller studerar bland 20-25 åringar från `r uvas_20_25_kvinnor_0_1` procent för de som varit i Sverige i max 2 år till `r uvas_20_25_kvinnor_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel för inrikes födda kvinnor är `r uvas_20_25_kvinnor_inrikes` procent.
+
+För utrikes födda män är trenden omvänd, där andelen som varken arbetar eller studerar bland 20-25 åringar istället ökar med vistelsetiden,  från ca `r uvas_20_25_man_0_1` procent för de som varit i Sverige i max 2 år till ungefär `r uvas_20_25_man_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel bland inrikes födda män i samma ålder är `r uvas_20_25_man_inrikes` procent. 
+
+Utrikes födda män mellan 20 och 25 år verkar således hamna i någon form av sysselsättning snabbare än män i åldersgruppen 16-19 år, men därefter ökar andelen som varken arbetar eller studerar bland 20-25 åringarna, medan den minskar för de mellan 16-19 år. Bland utrikes födda kvinnor är andelen som varken arbetar eller studerar högre bland 20-25 åringar än bland 16-19 åringar, oavsett vistelsetid, ett mönster som även gäller för inrikes födda kvinnor och män.
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_uvas$UVAS_vistelsetid_inrikes_senastear_Dalarna
+```
+<br>
+
+Andelen utrikes födda som varken arbetar eller studerar har förändrats relativt mycket över tid. I slutet på 1990-talet varken arbetade eller studerade runt 60 procent av de utrikes födda mellan 16 och 19 år som varit i Sverige i max 2 år, att jämföra med `r uvas_16_19_senaste_ar_0_1` procent idag. Den största minskningen skedde i början på 2000-talet och därefter har andelen varierat en del över tid. En liknande trend går att utläsa bland utrikes födda 16-19 åringar som varit i landet längre, men bland dessa är andelen som varken arbetar eller studerar tydligt lägre.
+
+Även bland utrikes födda mellan 20 och 25 år har motsvarande andel förändrats mycket över tid. I slutet på 1990-talet varken arbetade eller studerade runt 70 procent av de utrikes födda mellan 20 och 25 år som varit i Sverige i max 2 år, att jämföra med `r uvas_20_25_senaste_ar_0_1` procent idag. En stor del av minskningen skedde i mitten på 00-talet och därefter har andelen gått såväl upp som ner. En liknande utveckling syns även bland utrikes födda 20-25 åringar som varit i landet längre.
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_uvas$UVAS_vistelsetid_inrikes_tid_Dalarna
+```
+<br>
 
 ## Arbetsmarknad och sysselsättning
 
@@ -666,103 +773,6 @@ gg_etablering$etablering_tid
 
 ```
 
-
-<span class = "kommentar">Den förra rapporten innehöll ingenting som handlade om språkutveckling eller språkutbildning. Kan vi hitta någon officiell information på den punkten? Annars bör avsnittet bara heta "Vägen till utbildning"</span>
-
-En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv avseende en rad olika aspekter, såsom exempelvis hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en längre utbildning lever i allmänhet längre, har en genomsnittlig högre inkomst och mår i allmänhet bättre än de med kortare utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har många år kvar i livet.
-
-Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras (se diagram nedan). Den stora skillnaden jämfört mot inrikes födda är att en större andel av de utrikes födda innehar enbart förgymnasial utbildning och en mindre andel innehar gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Det är en lite högre andel kvinnor födda i Sverige med eftergymnasial utbildning än utrikes födda, men bland män är förhållandet det omvända.  Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
-
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-
-gg_utbniva_bakgrund$utbniva_inr_utr_kon_Dalarna_ar2023
-
-```
-
-<span class = "kommentar">Justera diagramförklaring ovan till inrikes och utrikes födda?</span>
-
-Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg- och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden. En aspekt som är viktig att beakta är att <span class = "kommentar">över 30 % av de som invandrat de senaste 11 åren har grundskolekompetens (förgymnasial) eller lägre utbildning</span>. Samtidigt saknas det uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. 
-
-De utrikes födda i Dalarna som har bott i Sverige en längre tid har generellt sett en högre utbildningsnivå än de som invandrat de senaste åren. Huruvida detta beror på skillnader i utbildningsnivå vid invandring, eller att de med längre vistelsetid i större grad hunnit genomfört en utbildning i Sverige framgår inte av diagrammet. Sannolikt är det en kombination av dessa två faktorer.
-
-*Diagram 1 - utbildningsnivå i Dalarna efter vistelsetid i Sverige*
-
-*Diagram 2 - Vistelsetid, utbildningsnivå och inträde på arbetsmarknaden*
-
-<span class = "kommentar">Diagrammen 1 och 2 ovan behövs för att kunna justera texten i avsnittet.</span>
-
-Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
-
-Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. År 2016 utgjordes 5 % av den förvärvsarbetande arbetskraften av yrken utan eller med kortare krav på utbildning och introduktion, vilket var lägst andel i hela EU. För att möjliggöra att fler av de utrikes födda som flyttat till Dalarna de senaste åren ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
-
-Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. I både Sverige och övriga västvärlden finns det emellertid gott om indikationer på att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden. En sak som pekar på detta är att de som är födda i Sverige med utrikes födda föräldrar presterar sämre på arbetsmarknaden än de med svensk bakgrund, även när hänsyn tas till skillnader i utbildningsnivå. Det är teoretiskt möjligt att andra faktorer kan påverka utfallet, men det förefaller föga troligt att skillnaderna skulle vara stora, utan att diskriminering förekommer i någon form. Det finns emellertid empiriskt stöd för att diskriminering på arbetsmarknaden verkligen förekommer. Flera svenska studier har undersökt frågan genom att skicka fiktiva ansökningar med påhittade personer till ett stort antal utlysta jobb. Resultatet av studierna har varit att personer med mer svenskklingande namn har betydligt större sannolikhet att bli kallad till en arbetsintervju än personer med ett utländskt klingande namn, trots att ansökningarna i övrigt är i stort sett identiska. De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.
-
-<span class = "kommentar">Är ovanstående fortsatt relevant? Senare forskning på området?</span>
-
-Eftersom gymnasieutbildning är viktigt för möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem. Enligt Socialstyrelsen är det 8 gånger större risk att varken arbeta eller studera för den som överhuvudtaget inte påbörjat gymnasiet, jämfört med en elev som har genomfört ett studieförberedande gymnasieprogram. Det finns även en stark överrisk att varken arbeta eller studera för den som har hoppat av gymnasiet, jämfört med den som har fullföljt en gymnasieutbildning.
-
-<span class = "kommentar">Är ovanstående fortsatt gällande?</span>
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-
- gg_gym_hogskola_behorighet$behorighet_gymnasiet_jmf_ar
-
-```
-
-Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. 2018 låg andelarna för såväl inrikes födda pojkar och flickor omkring 85-90 procent. De har förändrats marginellt fram till 2023. För utrikes födda flickor var andelen behöriga knappt 60 procent 2018 och har ökat till cirka 66 procent 2023. Utrikes födda pojkar har den mest positiva utvecklingen mellan åren, från knappt 48 procent till 68 procent. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023. <span class = "kommentar">Uppdaterat.</span>
-
-I rapporten 2019 studerades avgångseleverna i årskurs 9 år 2018 och det var tydligt att andelen behöriga med utländsk bakgrund påverkades av migrationsbakgrund. Skillnaderna i andelen behöriga är betydligt mindre mellan elever med utländsk och svensk bakgrund när förutsättningarna är mer likvärdiga. Vid en jämförelse var 91 procent av eleverna med svensk bakgrund behöriga och 86 procent av elever med utländsk bakgrund födda i Sverige behöriga, medan 85 procent av eleverna som invandrat före skolstart var behöriga. Bland elever i riket som invandrat i årskurs 1–5 var andelen behöriga elever däremot märkbart lägre, 67 procent. Allra lägst i riket var behörigheten bland nyanlända som hade invandrat under perioden 2014-2018 eller saknade svenskt personnummer. Där var andelen behöriga elever 28 procent. <span class = "kommentar">Uppdaterat. Hänvisar till 2019 års rapport. </span>
-
-[Mörtlund (2020)](https://www.ifau.se/Forskning/Publikationer/Rapporter/2020/arbetet-med-nyanlanda-elever-i-grundskolan/){target="_blank"}^[Mörtlund, Tove (2020). Arbetet med nyanlända elever i grundskolan. IFAU Rapport 2020:2.] noterade stora utmaningar i grundskolan att kvalitetssäkra undervisningen, trots instatser kring språk- och kunskapsutvecklande arbetssätt. Att på en kort tid lära sig svenska språket och samtidigt utveckla ämneskunskaper är en svår utmaning. <span class = "kommentar">Uppdaterat.</span>
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-
- gg_gym_hogskola_behorighet$behorighet_gymnasiet_vistelsetid
-
-```
-<span class = "kommentar">Data för 0-1 år saknas (NA)</span>
-
-Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige. Behörigheten för elever som går ut årskurs 9 med en vistelsetid som är 10 år eller längre, är i det närmaste att likställa med behörigheten för inrikes födda. I gruppen med en vistelsetid mellan 4 och 9 år är behörigheten omkring 20 procentenheter lägre och i gruppen vistelsetid 2-3 år är den ytterligare drygt 20 procentenheter lägre (knappt 40 procent har gymnasiebehörighet). <span class = "kommentar">Uppdaterat.</span>
-
-En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Även här är det en högre andel inrikes födda elever som är behöriga än utrikes födda. Skillnaderna är dock betydligt mindre än för avgångseleverna i årskurs 9. Något som är viktigt att beakta när detta studeras är att gymnasieskolan inte är obligatorisk, och att de som exempelvis har avbrutit gymnasiestudier eller läser in grundläggande gymnasiebehörighet inte omfattas av diagrammet. Samtliga av de utrikes födda elever i Dalarnas län som slutförde gymnasiet år 2018 hade längre än 4 års vistelsetid i Sverige.
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
-
- gg_gym_hogskola_behorighet$behorighet_högksola_jmf_ar
-
-```
-
-När andelen behöriga till högskolan undersöks så kan det vara av större relevans att mäta hur stor andel av 19-åringarna som ett visst år är behöriga till högskolan. Detta eftersom vi i Sverige vanligtvis är 19 år när vi erhåller gymnasieexamen. Det är viktigt att komma ihåg att detta inte ger någon heltäckande bild av alla personer eftersom det finns vissa elever som slutför gymnasiet när de är yngre eller äldre än 19 år. En ej slutförd gymnasieexamen vid 19 års ålder beror ändå i en majoritet av fallen på att eleven ligger efter i skolan eller har hoppat av gymnasiet. Av denna anledning blir denna variabel relevant när andelen högskolebehöriga efter bakgrund och kön jämförs. Det som kan konstateras är att utrikes födda i betydligt lägre grad än inrikes födda blir behöriga till högskolestudier vid 19 års ålder. Oavsett om eleven eller föräldrarna är utrikes eller inrikes födda är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män.
-
-
-```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
-gg_utbniva_bakgrund_alder$utb_niva_bakgrund
-```
-
-<span class = "kommentar">Diagram över 1: Andelar obehöriga till gymnasiet - inskrivna på IM-program utifrån bakgrund och 2:Utrikes födda unga som inte studerar eller inte aktiva på arbetsmarknaden utifrån vistelsetid</span>
-
-Bland personer mellan 16 och 19 år (det vänstra diagrammet nedan) är andelen som varken arbetar eller studerar (UVAS) högre för kvinnor än för män, oavsett om personen är inrikes eller utrikes född. Andelen är dessutom som högst för personer som vistats i Sverige en kort tid, och sjunker med vistelsetid. För utrikes födda kvinnor sjunker andelen som varken arbetar eller studerar bland 16-19 åringar från `r uvas_16_19_kvinnor_0_1` procent för de som varit i Sverige i max 2 år till `r uvas_16_19_kvinnor_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel för inrikes födda kvinnor är `r uvas_16_19_kvinnor_inrikes` procent.
-
-För utrikes födda män sjunker motsvarande andel bland 16-19 åringar från ca `r uvas_16_19_man_0_1` procent för de som varit i Sverige i max 2 år till ungefär `r uvas_16_19_man_10_` procent för de som varit i landet i minst 10 år. Noterbart är dock att andelen är högre för män som varit i Sverige i mer än 10 år, än fö de som varit i landet mellan 2 och 10 år. Bland inrikes födda varken arbetar eller studerar `r uvas_16_19_man_inrikes` procent av männen mellan 16 och 19 år.
-
-Om de unga mellan 20-25 år istället undersöks framträder en delvis annorlunda bild (se det högra diagrammet nedan). Bland kvinnor är andelen som varken arbetar eller studerar högre i denna åldersgrupp än den var bland 16-19 åringar, oavsett om personern är inrikes eller utrikes född. För utrikes födda kvinnor sjunker andelen som varken arbetar eller studerar bland 20-25 åringar från `r uvas_20_25_kvinnor_0_1` procent för de som varit i Sverige i max 2 år till `r uvas_20_25_kvinnor_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel för inrikes födda kvinnor är `r uvas_20_25_kvinnor_inrikes` procent.
-
-För utrikes födda män är trenden omvänd, där andelen som varken arbetar eller studerar bland 20-25 åringar istället ökar med vistelsetiden,  från ca `r uvas_20_25_man_0_1` procent för de som varit i Sverige i max 2 år till ungefär `r uvas_20_25_man_10_` procent för de som varit i landet i minst 10 år. Motsvarande andel bland inrikes födda män i samma ålder är `r uvas_20_25_man_inrikes` procent. 
-
-Utrikes födda män mellan 20 och 25 år verkar således hamna i någon form av sysselsättning snabbare än män i åldersgruppen 16-19 år, men därefter ökar andelen som varken arbetar eller studerar bland 20-25 åringarna, medan den minskar för de mellan 16-19 år. Bland utrikes födda kvinnor är andelen som varken arbetar eller studerar högre bland 20-25 åringar än bland 16-19 åringar, oavsett vistelsetid, ett mönster som även gäller för inrikes födda kvinnor och män.
-
-```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
-gg_uvas$UVAS_vistelsetid_inrikes_senastear_Dalarna
-```
-
-Andelen utrikes födda som varken arbetar eller studerar har förändrats relativt mycket över tid. I slutet på 1990-talet varken arbetade eller studerade runt 60 procent av de utrikes födda mellan 16 och 19 år som varit i Sverige i max 2 år, att jämföra med `r uvas_16_19_senaste_ar_0_1` procent idag. Den största minskningen skedde i början på 2000-talet och därefter har andelen varierat en del över tid. En liknande trend går att utläsa bland utrikes födda 16-19 åringar som varit i landet längre, men bland dessa är andelen som varken arbetar eller studerar tydligt lägre.
-
-Även bland utrikes födda mellan 20 och 25 år har motsvarande andel förändrats mycket över tid. I slutet på 1990-talet varken arbetade eller studerade runt 70 procent av de utrikes födda mellan 20 och 25 år som varit i Sverige i max 2 år, att jämföra med `r uvas_20_25_senaste_ar_0_1` procent idag. En stor del av minskningen skedde i mitten på 00-talet och därefter har andelen gått såväl upp som ner. En liknande utveckling syns även bland utrikes födda 20-25 åringar som varit i landet längre.
-
-```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
-gg_uvas$UVAS_vistelsetid_inrikes_tid_Dalarna
-```
 
 
 # Boende och flyttmönster
